# sofar

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test_congruency_regulary.yml
docs/: Makefile  api_reference.rst  conf.py  documentation.rst  examples.rst  getting_started.rst  index.rst  installation.rst  make.bat  modules.rst  notebooks_quick_tour.nblink  notebooks_working_with_sofa_files.nblink  other.rst  rtd_environment.yml  sofar.Sofa.rst  sofar.functions.rst  sofar.rst  usage.rst  working_with_sofa_files.rst
docs/_static/css/: custom.css  fa_icon_style_draft.css
docs/_templates/: navbar-nav.html
docs/modules/: sofar.rst
docs/reference/: index.rst  sofar.rst
docs/resources/: conventions.py  conventions.rst
examples/: quick_tour_of_sofa_and_sofar.ipynb  working_with_sofa_files.ipynb
examples/data/: head_related_impulse_responses_license.txt
examples/resources/: head_related_impulse_responses.py  my_first.sofa
sofar/: __init__.py  io.py  sofa.py  sofar.py  sofastream.py  update_conventions.py  utils.py
sofar/conventions/: FreeFieldDirectivityTF_1.0.csv  FreeFieldDirectivityTF_1.0.json  FreeFieldHRIR_1.0.json  FreeFieldHRTF_1.0.csv  FreeFieldHRTF_1.0.json  GeneralFIR-E_2.0.json  GeneralFIRE_1.0.json  GeneralFIR_1.0.json  GeneralFIR_2.0.json  GeneralString_0.2.json  GeneralTF-E_1.0.csv  GeneralTF-E_1.0.json  GeneralTF_1.0.json  GeneralTF_2.0.csv  GeneralTF_2.0.json  General_1.0.json  MultiSpeakerBRIR_0.3.json  SimpleFreeFieldHRIR_1.0.json  SimpleFreeFieldHRSOS_1.0.json  SimpleFreeFieldHRTF_2.0.json  SimpleFreeFieldSOS_1.0.json  SimpleHeadphoneIR_1.0.json  SingleRoomDRIR_0.3.json  SingleRoomMIMOSRIR_1.0.csv  SingleRoomMIMOSRIR_1.0.json  SingleRoomSRIR_1.0.csv  SingleRoomSRIR_1.0.json  _history.txt
sofar/conventions/source/: FreeFieldDirectivityTF_1.0.csv  GeneralFIRE_1.0.csv  GeneralFIR_1.0.csv  MultiSpeakerBRIR_0.3.csv  SimpleFreeFieldHRIR_1.0.csv  SimpleHeadphoneIR_1.0.csv  SingleRoomSRIR_1.0.csv
sofar/verification_rules/: _readme.txt  api.json  convention.json  data.json  data_type.json  deprecations.json  rules.json  unit_aliases.json  write_validation_rules.py
tests/: conftest.py  test_conventions_dimensions_consistency.py  test_deprecations.py  test_io.py  test_sofa.py  test_sofa_upgrade_conventions.py  test_sofa_verify.py  test_sofar.py  test_sofastream.py  test_utils.py
